# Raytracer_photo_style

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/first_iter/: camera.h  color.h  common_header.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  ray.h  sphere.h  vec3.h
src/second_iter/: aabb.h  bvh.h  camera.h  color.h  common_header.h  file_writer.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  sphere.h  texture.h  vec3.h
